# HeaderScanner

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml  deploy.yml
app/: __init__.py  config.py  main.py  models.py  scanner.py
app/api/: __init__.py  routes.py
app/models/: __init__.py  schemas.py
app/scanner/: __init__.py  fetch.py  service.py  ssrf.py
app/scoring/: __init__.py  grader.py  rubric.py
app/static/: app.js  index.html  style.css
tests/: test_api.py  test_fetch.py  test_scanner.py  test_scoring.py  test_ssrf.py
